<resources>
    <string name="app_name">GradeCalculator</string>
    <string name="individualCalcButton"> Individual Course Calculator</string>
    <string name="gpaCalculator"> GPA Calculator</string>
    <string name="calculateText">Calculate</string>
    <string name="termworkText">Term Work</string>
    <string name="midtermText">MidTerm</string>
    <string name="finalText">Final %</string>
    <string name="enteramarkEditText">Assignment grade</string>
    <string name="entermidmarkText">Midterm grade</string>
    <string name="enterweightText">Weight</string>
    <string name="enterfinmarkText">Final Grade</string>
    <string name="assignmentText">Assignment %</string>
    <string name="weightText">Weight %</string>
    <string name="addmarkText">+</string>
    <string name="removeText">-</string>
    <string name="markText">Grade</string>
    <string name="sidtermText">Midterm %</string>
    <string name="resetText">Reset</string>
    <string name="examText">Exams</string>
    <string name="courseWeightText">Course Weight</string>
    <string name="grade_prompt">Choose Your Grade</string>
    <string name="course_prompt">Course Weight</string>
    <string name="submit_btn">Submit</string>
    <string name="uniTitle">UNIVERSITY OF</string>
    <string name="torTitle">TORONTO</string>
    <string name="gcTitle">GRADE CALCULATOR</string>


    <string-array name="grade_arrays">
        <item>F :0-49</item>
        <item>D- :50-52</item>
        <item>D :53-56</item>
        <item>D+ :57-59</item>
        <item>C- :60-62</item>
        <item>C :63-66</item>
        <item>C+ :67-69</item>
        <item>B- :70-72</item>
        <item>B :73-76</item>
        <item>B+ :77-79</item>
        <item>A- :80-84</item>
        <item>A :85-89</item>
        <item>A+ :90-100</item>
    </string-array>

    <string-array name="course_arrays">
        <item>No Credit: 0</item>
        <item>Half Credit: 0.5</item>
        <item>Full Credit: 1</item>
    </string-array>

</resources>
