<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_individual_course"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#BAC8D6"
    tools:context="com.example.jay.gradecalculator.IndividualCourseActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/picclogo"
                android:background="#BAC8D6"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/termworkText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:id="@+id/textView"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/assignmentText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:layout_weight="1"/>

                    <TextView
                        android:text="@string/weightText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:gravity="end"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/addLinearLayout">
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/markText"
                            android:layout_weight="1"
                            android:id="@+id/firstAssign"/>

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enterweightText"
                            android:gravity="end"
                            android:layout_weight="1"
                            android:id="@+id/firstWeight"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:gravity="end"/>
                    <Button
                        android:layout_weight="3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/removeText"
                        android:id="@+id/removeAsssignButton"
                        android:background="@drawable/button_border"
                        android:textColor="#ffffff"
                        android:onClick="removeAssignments"/>

                    <Button
                        android:layout_weight="3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addmarkText"
                        android:id="@+id/addAssignButton"
                        android:background="@drawable/button_border"
                        android:textColor="#ffffff"
                        android:onClick="addAssignments"/>
                </LinearLayout>

                <TextView
                    android:text="@string/examText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:gravity="center"/>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/sidtermText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:layout_weight="1"/>

                    <TextView
                        android:text="@string/weightText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:gravity="end"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/markText"
                        android:layout_weight="1"
                        android:id="@+id/midAssign"/>

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enterweightText"
                        android:gravity="end"
                        android:layout_weight="1"
                        android:id="@+id/midWeight"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "/>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/finalText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:layout_weight="1"/>

                    <TextView
                        android:text="@string/weightText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:gravity="end"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/markText"
                        android:layout_weight="1"
                        android:id="@+id/finalAssign"/>

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enterweightText"
                        android:gravity="end"
                        android:layout_weight="1"
                        android:id="@+id/finalWeight"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "/>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"/>

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/calculateText"
                        android:textSize="18sp"
                        android:textColor="#ffffff"
                        android:background="@drawable/button_border"
                        android:layout_weight="1"
                        android:onClick="calculateGrade"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_weight="2"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "/>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/resetText"
                        android:layout_weight="1"
                        android:textColor="#ffffff"
                        android:background="@drawable/button_border"
                        android:onClick="reset"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>
