<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_individual_course"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#BAC8D6"
    tools:context="com.example.jay.gradecalculator.IndividualCourseActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/picclogo"
            android:background="#BAC8D6"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/courseWeightText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_weight="1"
                android:gravity="center"/>

            <TextView
                android:text="@string/markText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="9sp"
                android:layout_weight="1"
                android:gravity="end"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/addSpinnerLayout">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/course_weight"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:entries="@array/course_arrays">
                </Spinner>
                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/grade_spin"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:entries="@array/grade_arrays">

                </Spinner>
            </LinearLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="9sp"
                android:layout_weight="1"
                android:gravity="end"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:gravity="end"/>
                <Button
                    android:layout_weight="3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/removeText"
                    android:id="@+id/removeCourseButton"
                    android:onClick="removecourseGrade"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_border"/>

                <Button
                    android:layout_weight="3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addmarkText"
                    android:id="@+id/addCourseButton"
                    android:onClick="addcourseGrade"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_border"/>
            </LinearLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_btn"
                android:id="@+id/submitGpaBtn"
                android:onClick="submitGpa"
                android:textColor="#ffffff"
                android:background="@drawable/button_border"/>
        </LinearLayout>
    </ScrollView>
    </FrameLayout>
</LinearLayout>